terratest/examples/failover-playground-istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: playground-failover
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - hosts:
        - playground-failover.cloud.example.com
      port:
        name: http
        number: 8080
        protocol: http
