terratest/examples/roundrobin-weight1-istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: test-gslb
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - hosts:
        - terratest-roundrobin.cloud.example.com
      port:
        name: http
        number: 8080
        protocol: http
