terratest/examples/roundrobin2-istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: roundrobin-test-gslb
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingressgateway
  servers:
    - hosts:
        - roundrobin-test.cloud.example.com
      port:
        name: http
        number: 8080
        protocol: http
