terratest/examples/failover-playground-istio-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: playground-failover-2
  labels:
    app: playground-failover-2
spec:
  gateways:
    - istio-ingress/playground-failover-2
  hosts:
    - playground-failover-2.cloud.example.com
  http:
    - route:
        - destination:
            host: frontend-podinfo
            port:
              number: 9898
