terratest/examples/failover-playground-ref-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playground-failover-1
  labels:
    app: playground-failover-1
spec:
  ingressClassName: nginx
  rules:
    - host: playground-failover-1.cloud.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-podinfo # Gslb should reflect Healthy status and create associated DNS records
              port:
                name: http
