terratest/examples/failover-ref-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-gslb
  labels:
    app: test-gslb
spec:
  ingressClassName: nginx
  rules:
    - host: terratest-failover.cloud.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-podinfo # Gslb should reflect Healthy status and create associated DNS records
              port:
                name: http
