terratest/examples/ingress-annotation-failover-simple.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-gslb-failover-simple
  annotations:
    k8gb.io/strategy: failover
    k8gb.io/primary-geotag: "eu"
spec:
  rules:
    - host: ingress-failover-simple.cloud.example.com
      http:
        paths:
          - backend:
              serviceName: frontend-podinfo # Service name to enable GSLB for
              servicePort: http
            path: /
