terratest/examples/ingress-annotation-failover.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    k8gb.io/strategy: failover
    k8gb.io/primary-geotag: "eu"
    k8gb.io/dns-ttl-seconds: "60"
    k8gb.io/splitbrain-threshold-seconds: "600"
  name: test-gslb-annotation-failover
spec:
  rules:
  - host: notfound.cloud.example.com
    http:
      paths:
      - backend:
          serviceName: non-existing-app
          servicePort: http
        path: /
  - host: unhealthy.cloud.example.com
    http:
      paths:
      - backend:
          serviceName: unhealthy-app
          servicePort: http
        path: /
  - host: roundrobin.cloud.example.com
    http:
      paths:
      - backend:
          serviceName: frontend-podinfo
          servicePort: http
        path: /
