terratest/examples/ingress-annotation-rr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    k8gb.io/strategy: roundRobin
    k8gb.io/dns-ttl-seconds: "5"
  name: test-gslb-annotation
spec:
  ingressClassName: nginx
  rules:
  - host: ingress-rr-notfound.cloud.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: non-existing-app
            port:
              name: http
  - host: ingress-rr-unhealthy.cloud.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: unhealthy-app
            port:
              name: http
  - host: ingress-rr.cloud.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-podinfo
            port:
              name: http
