terratest/examples/roundrobin2-istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: roundrobin-test-gslb
  labels:
    app: roundrobin-test
spec:
  gateways:
    - istio-ingress/roundrobin-test-gslb
  hosts:
    - roundrobin-test.cloud.example.com
  http:
    - route:
        - destination:
            host: frontend-podinfo
            port:
              number: 9898
